# prompt-enhancer-service

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  README.md  SPEC.md  pyproject.toml
.github/: dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  security.yml
article/: article.md
src/prompt_enhancer/: main.py
src/prompt_enhancer/enhancer/: llm_client.py  prompt_builder.py
src/prompt_enhancer/terminal/: context.py  monitor.py
src/prompt_enhancer/voice/: capture.py  transcribe.py
src/prompt_pulse/: __init__.py  config.py  main.py
src/prompt_pulse/delivery/: __init__.py  clipboard.py  iterm_paste.py  notification.py
src/prompt_pulse/enhancer/: __init__.py  llm_client.py  prompt_builder.py
src/prompt_pulse/terminal/: __init__.py  context.py  error_patterns.py  monitor.py
src/prompt_pulse/voice/: __init__.py  capture.py  transcribe.py
tests/: test_config.py  test_context_builder.py  test_error_patterns.py  test_llm_client.py  test_prompt_enhancer.py  test_prompt_pulse.py  test_terminal_monitor.py  test_voice_capture.py
